--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo List</title>
+    <link rel="shortcut icon" href="./icons/Vawikonka PNG.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <script src="./index.js" defer></script>
 </head>
